Fix icons alignement

--- a/app/styles/_global/global.sass
+++ b/app/styles/_global/global.sass
@@ -13,7 +13,7 @@ html
     display: inline-block
     vertical-align: middle
   &> .fa
-    font-size: 17px
+    font-size: 1.2em
     margin-right: 5px
     vertical-align: middle
 
