--- a/app/styles/_global/icons.sass
+++ b/app/styles/_global/icons.sass
@@ -2,8 +2,6 @@
 
 @include font-face(icomoon, "/assets/fonts/icomoon", normal, normal, eot svg ttf woff woff2)
 
-.icon
-  vertical-align: inherit
 
 .fa
   /* use !important to prevent issues with browser extensions that change fonts
@@ -14,9 +12,6 @@
   font-style: normal
   font-weight: normal
   font-variant: normal
-  font-variant-ligatures: normal
-  font-variant-caps: normal
-  font-variant-numeric: normal
   font-stretch: normal
   text-transform: none
   text-align: center
